# SGR-Council-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  telegram_post.txt
council_agent/: __init__.py  cerebras_adapter.py  config.py  llm_client.py  logger.py  main.py  orchestrator.py  prompts.py  requirements.txt  schemas.py
