[project]
name = "erc3-council-agent"
version = "0.1.0"
description = "Multi-LLM council agent with structured outputs for ERC3 benchmarks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "erc3>=1.0.4",
    "openai>=2.8.1",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[[tool.uv.index]]
name = "erc3"
url = "https://erc.timetoact-group.at/simple/"
explicit = true
